# talea

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
.claude/agents/: code-reviewer.md  project-scout.md  security-auditor.md
.claude/hooks/: post-edit-lint.sh
.sqlx/: query-036fde2afb815e6b0c8699da4afdba52275b0fd6dc69efc84ef93e11c3ddbe1d.json  query-1845ee4953c314764576e10a50f24685a438050697f14208276801d9dfe58f7a.json  query-1c631bf9197e95fbb67fb0e6934b32486a728c7071a27a2320a89a392f1ed301.json  query-21aa42e891301d3d9f789d07e3911f4016a9eabd7f50024b53284b6b6a60ce8b.json  query-2345fb92c7dcb442f3aa560ef1fc4721854859d3717cf6d8b08a09ac25d6dcb1.json  query-30947e2d55a49d68c9f420a499bc820f5dcc1f7f6a86b6d4865e0c34350b29bb.json  query-370ab1b5d836ec7c5dd290b50e32d6e95662fa47bbaf220da1e95d860cc7bcfc.json  query-4ab9aa087dfeec6d99ee82368c3d0689c278054afc09a03e53a821d0630570d0.json  query-4afcb1bc3ff69fc8a8a4679fe890a357f70624c78b33f14db6c80cd46d36eab6.json  query-500375a177faff217d1f656d064bfb26a9af1ee087183afe1046ecd453ff0a86.json  query-5658702ae2ad88d02a3a18a28d724f2bea765cd40456d77b99e7af230e6004f0.json  query-5744f836fa7b679a321c0af70bac5ad73c88117dffd3e2a95af81322d52e7c49.json  query-5b4de556e458423217ad69a47ea166da071614f46a8862a1a0214853265f12f5.json  query-5ff632002bf6dc37f59ccf23a1138ae04869530d95748b265c5f9b0807c268b4.json  query-655bd72b13d626f79d6a248204eb535541cf3d2f8117eb44898812081f4ca781.json  query-801c6a824a098d0518b1e9bcde4e80f87bca33cff0a060e83bd3a3efde396218.json  query-8320cd8407097177e28e89c8ee5c50b4af901975efe38307362b805ca91d45d0.json  query-8c25a9a82bc8a23dc5d5e6ca158bc15050c586b25dbc31fd61ca4326478ca9ad.json  query-926c9d4dd335d63c166ebbc13d6a5dbb284d70c83ddf8a15f4cd9dacb7a74c2b.json  query-98e91b135d6cf013cdc58596bb621e3d86c5f969eb09f92f9bd76f2c245fc8e2.json  query-b4d4232d14d9ff9b768e9eb30c69310bcae35e820c85f66b4c34b898b7ffa220.json  query-c767a87010a4c74c7a0b828fbaec0dfd25d7ba4b773c9e90fbb198b4e6ba3e5d.json  query-caf7ba1e7cfc8ec41d216e6c8cc52dedc573a26dd8d17c7e7567e09942fd699b.json  query-cc45ee27ebae31ea834e40cf50414e3db6ad59566d9d8d92043722e20d46c3b2.json  query-cf3ec7f78651c9cfa45e15b41c88f1206054d31b4f823081191fe3a5c4b2383a.json  query-d3d85671f369d63b822c65eb47c6907256006d85512f96f9a62be70cd647ee20.json  query-d5a2397522694e9c68505025ce475f16adb2549617e7e471126c25baff3b365e.json  query-d8b7321addc9eedb25da070561a3eec5d4837634343a21e3a029ae2b2dbe551c.json  query-ef2aac7bba9daefa06b82c6f1cebf1bc53879894544ed6c5be0433e39830ecb2.json  query-f38e16f28973f1b705cc342fb7a3681fc6e4b6d9c56ff82d3886f8ec6a2c0bb4.json  query-fd62446a5a28f43242092b5b8d8b691152f885c3aba72fac5c52f070e90b3b71.json
core/: Cargo.toml
core/src/: domain.rs  lib.rs  money.rs
core/src/domain/: account.rs  category.rs  date.rs  entry.rs  error.rs  ids.rs  ledger.rs  mod.rs  month.rs  recurring.rs  stats.rs
docs/: DESIGN.md  DEVELOPMENT.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  commands.ts  hooks.ts  queryKeys.ts  types.ts
frontend/src/components/: AccountForm.tsx  AccountOnboarding.tsx  AccountSwitcher.tsx  BudgetRing.tsx  BudgetWidgetPublisher.tsx  CategoryForm.tsx  ConfirmDialog.tsx  DatePicker.tsx  EmojiPicker.tsx  EntryForm.tsx  EntryList.tsx  EntryRow.tsx  ErrorBanner.tsx  LockGate.tsx  LockScreen.tsx  Modal.tsx  MonthNav.tsx  NavBar.tsx  OccurrenceActions.tsx  OccurrenceRow.tsx  PieChart.tsx  RuleForm.tsx  Select.tsx  Spinner.tsx  SummaryBar.tsx  icons.tsx
ios-widget/: README.md
ios-widget/TaleaWidget/: Info.plist  SelectAccountIntent.swift  SharedHealth.swift  TaleaWidget.entitlements  TaleaWidget.swift  TaleaWidgetBundle.swift
scripts/: android.sh  configure_ios_project.py  flatten_ios_icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon-manifest.json  icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/migrations/: 0001_init.sql  0002_rule_amount.sql  0003_rule_skip.sql  0004_summary_account.sql
src-tauri/src/: backup.rs  commands.rs  db.rs  dto.rs  error.rs  lib.rs  main.rs  tests.rs  webdav.rs
src-tauri/src/repo/: account.rs  category.rs  entry.rs  map.rs  mod.rs  rule.rs  skip.rs
tauri-plugin-budgetwidget/: .gitignore  Cargo.toml  build.rs
tauri-plugin-budgetwidget/android/: build.gradle.kts  proguard-rules.pro
tauri-plugin-budgetwidget/android/src/main/: AndroidManifest.xml
tauri-plugin-budgetwidget/android/src/main/java/com/luminaapps/talea/budgetwidget/: BudgetWidgetConfigActivity.kt  BudgetWidgetPlugin.kt  BudgetWidgetProvider.kt  WidgetData.kt
tauri-plugin-budgetwidget/android/src/main/res/drawable/: widget_background.xml
tauri-plugin-budgetwidget/android/src/main/res/layout/: budget_widget.xml
tauri-plugin-budgetwidget/android/src/main/res/values/: strings.xml
tauri-plugin-budgetwidget/android/src/main/res/xml/: budget_widget_info.xml
tauri-plugin-budgetwidget/ios/: Package.swift
tauri-plugin-budgetwidget/ios/Sources/: BudgetWidgetPlugin.swift
tauri-plugin-budgetwidget/permissions/: default.toml
tauri-plugin-budgetwidget/permissions/autogenerated/: reference.md
tauri-plugin-budgetwidget/permissions/autogenerated/commands/: publish_health.toml
tauri-plugin-budgetwidget/permissions/schemas/: schema.json
tauri-plugin-budgetwidget/src/: lib.rs
tauri-plugin-statusbar/: Cargo.toml  build.rs
tauri-plugin-statusbar/android/: build.gradle.kts  proguard-rules.pro
tauri-plugin-statusbar/android/src/main/java/: StatusbarPlugin.kt
tauri-plugin-statusbar/ios/: Package.swift
tauri-plugin-statusbar/ios/Sources/: StatusbarPlugin.swift
tauri-plugin-statusbar/permissions/: default.toml
tauri-plugin-statusbar/permissions/autogenerated/: reference.md
tauri-plugin-statusbar/permissions/autogenerated/commands/: set_dark.toml
tauri-plugin-statusbar/permissions/schemas/: schema.json
tauri-plugin-statusbar/src/: lib.rs
(+46 files in other folders)
