[workspace]
members = ["core", "src-tauri", "tauri-plugin-statusbar"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Max Fiedler <max.fiedler1988@pm.me>"]
repository = "https://github.com/maxfiedler/talea"

# Shared dependency versions. Crates opt in via `dep.workspace = true`.
[workspace.dependencies]
rust_decimal = { version = "1.36", default-features = false, features = ["serde", "std"] }
rust_decimal_macros = "1.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["macros", "serde", "parsing", "formatting"] }

# A release profile tuned for small, fast mobile binaries.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
