[package]
name = "talea-core"
description = "Pure-Rust domain logic and money math for Talea. No Tauri, IO, or SQL."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Only used by unit tests (the `dec!` literal macro); kept out of the binary.
rust_decimal_macros.workspace = true
serde_json.workspace = true
