[package]
name = "talea"
description = "Talea — the Tauri shell that bridges the core domain to the UI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# The library is what the mobile (Android/iOS) entry points link against; the
# binary is the desktop entry point. Both call into `talea_lib::run`.
[lib]
name = "talea_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
talea-core = { path = "../core" }
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
log = "0.4"
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "sqlite-bundled",
    "macros",
    "migrate",
] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# The biometric app lock is a mobile-only capability (Android/iOS). The plugin
# is not compiled into the desktop dev binary; on desktop the frontend's
# availability check returns false and the app simply doesn't lock.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
