[package]
name = "talea"
description = "Talea — the Tauri shell that bridges the core domain to the UI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# The library is what the mobile (Android/iOS) entry points link against; the
# binary is the desktop entry point. Both call into `talea_lib::run`.
[lib]
name = "talea_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
talea-core = { path = "../core" }
tauri-plugin-statusbar = { path = "../tauri-plugin-statusbar" }
tauri-plugin-budgetwidget = { path = "../tauri-plugin-budgetwidget" }
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
log = "0.4"
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "sqlite-bundled",
    "macros",
    "migrate",
] }
# WebDAV (Nextcloud) backup/restore. rustls (not native-tls) so it
# cross-compiles to iOS/Android without OpenSSL. reqwest 0.13's `rustls`
# feature defaults to the C/asm aws-lc-rs provider; we pin the pure-Rust `ring`
# provider instead (cleaner mobile cross-compile) via `rustls-no-provider`.
# We also supply our own TLS config (ring + bundled `webpki-roots`) rather than
# reqwest's default `rustls-platform-verifier`, which on Android/iOS needs JNI
# initialization we don't do (and would panic). See `webdav.rs`.
reqwest = { version = "0.13", default-features = false, features = [
    "rustls-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# The biometric app lock is a mobile-only capability (Android/iOS). The plugin
# is not compiled into the desktop dev binary; on desktop the frontend's
# availability check returns false and the app simply doesn't lock.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
