[package]
name = "tauri-plugin-statusbar"
description = "Set the system status/navigation bar icon appearance to match the app theme (Android/iOS)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
# Required for plugins with a mobile (Android/iOS) component so Tauri can locate
# the native projects during the mobile build.
links = "tauri-plugin-statusbar"

[dependencies]
tauri = { version = "2" }
serde = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
